[package]
name = "twilio-fax-client"
version = "0.1.0"
authors = ["Brendan Early <mymindstorm@evermiss.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI
imgui = "0.2.1"
glium = { version = "0.25", default-features = true }
clipboard = "0.5.0"
imgui-glium-renderer = "0.2.0"
imgui-winit-support = "0.2.1"
# Request
http = "0.1.19"
openssl = "0.10.26"
