[package]
name = "twilio-fax-client"
version = "0.1.0"
authors = ["Brendan Early <mymindstorm@evermiss.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI
imgui = "0.2.1"
glium = { version = "0.25", default-features = true }
clipboard = "0.5.0"
imgui-glium-renderer = "0.2.0"
imgui-winit-support = "0.2.1"
# Request
reqwest = "0.9.22"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.41"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.9"
